# applet-window-appmenu6

./: CHANGELOG.md  CMakeLists.txt  README.md  config-appmenu.h.cmake
lib/: CMakeLists.txt  appmenuapplet.cpp  appmenuapplet.h  decorationpalette.cpp  decorationpalette.h  metadata.json
package/contents/config/: config.qml
package/contents/ui/: Broadcaster.qml  CustomLabel.qml  FlickableIndicators.qml  MenuFlickable.qml  PaintedToolButton.qml  main.qml
package/contents/ui/config/: ColorsComboBox.qml  ConfigGeneral.qml
plugin/: CMakeLists.txt  appmenumodel.cpp  appmenumodel.h  appmenuplugin.cpp  commontools.cpp  schemecolors.cpp  schemecolors.h  schemesmodel.cpp  schemesmodel.h
plugin/libdbusmenuqt/: CMakeLists.txt  dbusmenuimporter.cpp  dbusmenushortcut_p.cpp  dbusmenutypes_p.cpp  utils.cpp  utils_p.h
plugin/libdbusmenuqt/test/: CMakeLists.txt  main.cpp
plugin/wm/: abstractwindowmanager.cpp  abstractwindowmanager.h  waylandwindowmanager.cpp  waylandwindowmanager.h  x11fallbackwindowmanager.cpp  x11fallbackwindowmanager.h
